[package]
name = "rust-server-petstore"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.53"

mongodb ={ version = "3.2.0"}
tokio = "1.43.0"
futures = "0.3"

# add log and env_logger for logging
bson = "2.13.0"
env_logger = "0.11.6"
log = "0.4"  # Add this line
actix-cors = "0.7"
