[package]
name = "rust-server-petstore"
version = "1.0.1"
edition = "2021"

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
mongodb = "3.4.1"
bson = "3.1.0"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.28"
env_logger = "0.11.8"
jiff = "0.2.16"
